@startuml

namespace al5d_cpp {
    class Duration

    class Degree {
        + Degree(value : Integer)
        - validate() : void
        + value : Integer
    }
    
    class DegreeRange {
        + value_1 : Degree
        + value_2 : Degree
        + min_value : Degree
        + max_value : Degree
        + DegreeRange(value_1 : Degree, value_2 : Degree)
        + is_within_range(degrees : Degree) : void
        + get_difference() : double
        - validate() : void
    }

    class JointNameDegree <<(S,Orchid)>> {
        + joint_name : String
        + degree : Degree
    }

    class JointType <<(E,Orange)>> {
        + JOINT_BASE=0,
        + JOINT_SHOULDER=1,
        + JOINT_ELBOW=2,
        + JOINT_WRIST=3,
        + JOINT_GRIPPER=4,
        + JOINT_WRIST_ROTATE=5,
    }

    class JointTypeDegree {
        + joint_type : JointType
        + degree : Degree
    }

    class PulseWidth {
        + value : Unsigned Integer
        - validate() : void
    }

    class PulseWidthRange {
        + get_difference() : Double
        + min_value : PulseWidth
        + max_value : PulseWidth
        - validate() : void
    }

    class Duration {
        + from_milliseconds(milliseconds : Long) : Duration
        + from_seconds(seconds : Double) : Duration
        + in_seconds() : Double
        + in_milliseconds() : Long
        - milliseconds : Long
    }

    Degree "2" <-- "1" DegreeRange
    Degree "1" <-- "1" JointNameDegree
    JointType "1" <-- "1" JointTypeDegree
    Degree "1" <-- "1" JointTypeDegree
    PulseWidth "2" <-- "1" PulseWidthRange
}

legend right
  <b><color:Orchid>S Struct</color></b>
  <b><color:DarkCyan>C Class</color></b>
  <b><color:Orange>E Enum</color></b>
endlegend

@enduml
